# boilerplate-occt-cmake

./: .gitignore  CMakeLists.txt  build.sh  readme.md
scripts/: 00-emsdk-install.sh  05-emsdk-activate.sh  06-emsdk-bootstrap-freetype.sh  15-compile_install_freetype.sh  25-compile_install_occt.sh  init_vars.sh  install_deps.sh  install_emsdk.sh  setup_project.sh
src/: main.cpp
